# voice-loop

./: .gitignore  MEMORY.md.example  README.md  SOUL.md  pyproject.toml  voice_loop_mac.py
experimental/: gemma-audio-turn-interruption.md
